[gd_scene format=3 uid="uid://bdokr815lfb6j"]

[ext_resource type="Script" uid="uid://3s754tjck0am" path="res://ui/menus/pause/pause_menu.gd" id="1_50142"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23r80"]
bg_color = Color(0.19607843, 0.36078432, 0.5647059, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.74978, 0.74978, 0.74977994, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Animation" id="Animation_nqosn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_23r80"]
resource_name = "appear"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_grago"]
resource_name = "disappear"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nqosn"]
_data = {
&"RESET": SubResource("Animation_nqosn"),
&"appear": SubResource("Animation_23r80"),
&"disappear": SubResource("Animation_grago")
}

[node name="PauseMenu" type="CanvasLayer" unique_id=524433129]
process_mode = 3
script = ExtResource("1_50142")

[node name="Panel" type="Panel" parent="." unique_id=1957118418]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -260.0
offset_right = 224.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_23r80")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel" unique_id=758046463]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -260.0
offset_right = 152.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer" unique_id=300898251]
texture_filter = 2
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "MENU_LABEL_PAUSED"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer" unique_id=1264071005]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
text = "MENU_BUTTON_RESUME"
text_overrun_behavior = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer" unique_id=1650985834]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
text = "MENU_BUTTON_SAVE"
text_overrun_behavior = 1

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer" unique_id=197042973]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
text = "MENU_BUTTON_SETTINGS"
text_overrun_behavior = 1

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer" unique_id=562788747]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
text = "MENU_BUTTON_EXIT"
text_overrun_behavior = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1107016654]
libraries/ = SubResource("AnimationLibrary_nqosn")

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
